Add Initial setup for the server, Added icons to the bottom tab bar and initial ministore

--- a/supertal_app/tsconfig.json
+++ b/supertal_app/tsconfig.json
@@ -6,6 +6,9 @@
     "baseUrl": "./",
     "paths": {
       "@app/*": ["./*"]
-    }
+    },
+
+    "typeRoots": ["./node_modules/@types", "./src/@types"],
+    "types": ["node", "jest", "custom-types"]
   }
 }
