--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,16 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.11",
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2"
   }
