--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "nodemon",
-    "start": "node ./dist/server.js"
+    "build": "tsc",
+    "start": "node ./dist/server.js",
+    "dev": "nodemon"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
@@ -13,12 +14,14 @@
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "morgan": "^1.10.0",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@types/morgan": "^1.9.9",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2"
