--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,11 +8,8 @@
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": "./",
-    "paths": {
-      "*": ["node_modules/*", "src/types/*"]
-    },
     "skipLibCheck": true,
     "strict": true
   },
-  "include": ["src/**/*"]
+  "include": [".", "src"]
 }
