Add API to get movies from server and display them

--- a/supertal_app/tsconfig.json
+++ b/supertal_app/tsconfig.json
@@ -8,7 +8,7 @@
       "@app/*": ["./*"]
     },
 
-    "typeRoots": ["./node_modules/@types", "./src/@types"],
+    "typeRoots": ["./node_modules/@types"],
     "types": ["node", "jest", "custom-types"]
   }
 }
