--- a/supertal_app/package.json
+++ b/supertal_app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "@shopify/flash-list": "^1.6.4",
     "axios": "^1.6.8",
     "react": "18.2.0",
