--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,11 +3,9 @@ version: "3.8"
 services:
   postgres:
     image: postgres:latest
-    container_name: my-postgres
+    container_name: supertal-db
     environment:
-      POSTGRES_USER: supertal
-      POSTGRES_PASSWORD: supertal
-      POSTGRES_DB: supertal
+      - .env
     ports:
       - "5432:5432"
     volumes:
