--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,7 +9,8 @@
     "outDir": "dist",
     "baseUrl": "./",
     "skipLibCheck": true,
-    "strict": true
+    "strict": true,
+    "typeRoots": [".src/@types"]
   },
   "include": [".", "src"]
 }
