--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.11",
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
@@ -21,6 +22,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/morgan": "^1.9.9",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.0",
